--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -24,7 +24,7 @@
         android:enabled="true"
         android:icon="@drawable/free_icon_calendar1"/>
     <item
-        android:id="@+id/shiftScheduleFragment"
+        android:id="@+id/shiftScheduleGraph"
         android:title="Смена"
         android:enabled="true"
         android:icon="@drawable/baseline_supervisor_account_24"/>
