--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -15,7 +15,7 @@
         android:id="@+id/electricMotorFragment"
         android:name="com.example.svetlogorskchpp.electricMotor.ElectricMotorFragment"
         android:label="fragment_electric_motor"
-        tools:layout="@layout/fragment_electric_motor" >
+        tools:layout="@layout/fragment_electric_motor">
         <action
             android:id="@+id/action_electricMotorFragment_to_blankFragment"
             app:destination="@id/blankFragment" />
@@ -24,7 +24,7 @@
         android:id="@+id/electricalAssemblyFragment"
         android:name="com.example.svetlogorskchpp.electricalAssembly.ElectricalAssemblyFragment"
         android:label="fragment_electrical_assembly"
-        tools:layout="@layout/fragment_electrical_assembly" >
+        tools:layout="@layout/fragment_electrical_assembly">
         <action
             android:id="@+id/action_electricalAssemblyFragment_to_dialogFragmentAssembly"
             app:destination="@id/dialogFragmentAssembly" />
@@ -32,81 +32,16 @@
     <dialog
         android:id="@+id/dialogFragmentAssembly"
         android:name="com.example.svetlogorskchpp.electricalAssembly.DialogFragmentAssembly"
-        tools:layout="@layout/dialog_fragment_assembly"
-        android:label="DialogFragmentAssembly" >
+        android:label="DialogFragmentAssembly"
+        tools:layout="@layout/dialog_fragment_assembly">
         <argument
             android:name="idElectricalAssembly"
             app:argType="string" />
     </dialog>
     <include app:graph="@navigation/home" />
     <include app:graph="@navigation/inspection" />
-    <fragment
-        android:id="@+id/shiftScheduleFragment"
-        android:name="com.example.svetlogorskchpp.__presentation.shift_schedule.fragment.ShiftScheduleFragment"
-        tools:layout="@layout/fragment_shift_schedule"
-        android:label="ShiftScheduleFragment" >
-        <action
-            android:id="@+id/action_shiftScheduleFragment_to_shiftScheduleEditCompositionFragment"
-            app:destination="@id/shiftScheduleEditCompositionFragment" />
-        <action
-            android:id="@+id/action_shiftScheduleFragment_to_shiftScheduleStaffDialog"
-            app:destination="@id/shiftScheduleStaffDialog" />
-        <action
-            android:id="@+id/action_shiftScheduleFragment_to_shiftScheduleAddNotesFragment"
-            app:destination="@id/shiftScheduleAddNotesFragment" />
-        <argument
-            android:name="date"
-            app:argType="long"
-            android:defaultValue="0L" />
-    </fragment>
-    <fragment
-        android:id="@+id/shiftScheduleEditCompositionFragment"
-        android:name="com.example.svetlogorskchpp.__presentation.shift_schedule_edit_composition.fragment.ShiftScheduleEditCompositionFragment"
-        tools:layout="@layout/fragment_shift_schedule_edit_composition"
-        android:label="ShiftScheduleEditCompositionFragment" />
-    <dialog
-        android:id="@+id/shiftScheduleStaffDialog"
-        android:name="com.example.svetlogorskchpp.__presentation.shift_schedule.dialog.ShiftScheduleStaffDialog"
-        android:label="dialog_shift_schedule_personal"
-        tools:layout="@layout/dialog_shift_schedule_personal" >
 
-        <argument
-            android:name="shift"
-            app:argType="com.example.svetlogorskchpp.__domain.en.Shift" />
-    </dialog>
-    <fragment
-        android:id="@+id/shiftScheduleAddNotesFragment"
-        android:name="com.example.svetlogorskchpp.__presentation.shift_schedule_calendar_add_notes.fragment.ShiftScheduleAddNotesFragment"
-        tools:layout="@layout/fragment_shift_schedule_add_notes"
-        android:label="ShiftScheduleAddNotesFragment" >
-
-        <argument
-            android:name="navigateAddNoteArgs"
-            app:argType="com.example.svetlogorskchpp.__presentation.shift_schedule.model.NavigateAddNoteArgs" />
-        <action
-            android:id="@+id/action_shiftScheduleAddNotesFragment_to_shiftScheduleStaffDialog"
-            app:destination="@id/shiftScheduleStaffDialog" />
-        <action
-            android:id="@+id/action_shiftScheduleAddNotesFragment_to_dialogCalendarDateFragment"
-            app:destination="@id/dialogCalendarDateFragment" />
-        <action
-            android:id="@+id/action_shiftScheduleAddNotesFragment_to_shiftScheduleFragment3"
-            app:destination="@id/shiftScheduleFragment"
-            app:popUpTo="@id/shiftScheduleFragment"
-            app:popUpToInclusive="false" />
-    </fragment>
-    <dialog
-        android:id="@+id/dialogCalendarDateFragment"
-        android:name="com.example.svetlogorskchpp.inspectionSchedule.DialogCalendarDateFragment"
-        android:label="DialogCalendarDateFragment"
-        tools:layout="@layout/dialog_inspection_schedule_calendar">
-    <argument
-        android:name="workingShift"
-        app:argType="string" />
-    <argument
-        android:name="date"
-        app:argType="java.util.Date" />
-    </dialog>
+    <include app:graph="@navigation/shift_schedule_graph" />
 
 
 </navigation>
