--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -9,4 +9,56 @@
         <item name="android:background">?android:attr/colorBackground</item>
         <item name="android:textColor">?android:attr/textColorPrimary</item>
     </style>
+
+    <style name="BaseTextViewStyle">
+        <item name="android:fontFamily">@font/ru_hero</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+    </style>
+
+    <style name="TextViewStyleHeading" parent="BaseTextViewStyle">
+        <item name="android:textColor">@color/orange_zero_vision</item>
+        <item name="android:textSize">24sp</item>
+    </style>
+
+    <style name="TextViewStyleContent" parent="BaseTextViewStyle">
+        <item name="android:textColor">@color/text_input_assembly</item>
+        <item name="android:textSize">20sp</item>
+    </style>
+
+    <style name="EditTestStyleRequestWork" parent="BaseTextViewStyle">
+        <item name="android:background">@drawable/background_edit_text</item>
+        <item name="android:textSize">18sp</item>
+        <item name="android:paddingStart">16dp</item>
+        <item name="android:paddingEnd">16dp</item>
+        <item name="android:paddingTop">14dp</item>
+        <item name="android:paddingBottom">14dp</item>
+        <item name="android:textColor">@color/name_devices_appbar</item>
+        <item name="android:textColorHint">@color/text_recycle_smile</item>
+    </style>
+
+    <style name="ButtonStyleRequestWork" >
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textSize">16sp</item>
+        <item name="elevation">4dp</item>
+        <item name="strokeColor">@color/floatingActionButton</item>
+        <item name="strokeWidth">2dp</item>
+        <item name="iconTint">@color/light_blue_200</item>
+        <item name="android:textColor">@color/name_devices_appbar</item>
+    </style>
+
+    <style name="ButtonStyleRequestWorkSave" >
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textSize">16sp</item>
+        <item name="elevation">4dp</item>
+        <item name="strokeColor">@color/calendar_background</item>
+        <item name="strokeWidth">2dp</item>
+        <item name="backgroundTint">@color/red_danger</item>
+        <item name="iconTint">@color/calendar_background</item>
+        <item name="android:textColor">@color/calendar_background</item>
+    </style>
+
+
 </resources>
