--- a/app/src/main/res/layout/fragment_shift_schedule_request_work.xml
+++ b/app/src/main/res/layout/fragment_shift_schedule_request_work.xml
@@ -172,24 +172,39 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="24dp"
             android:layout_marginEnd="16dp"
-
             android:background="@drawable/shift_schedule_compound_shift_background"
             android:orientation="vertical"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/et_additionally">
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
             <TextView
                 android:id="@+id/textView24"
                 style="@style/TextViewStyleHeading"
-                android:layout_gravity="center"
+                android:layout_weight="0.5"
                 android:layout_marginTop="16dp"
                 android:textSize="22sp"
+                android:gravity="center"
                 android:layout_marginBottom="8dp"
                 android:text="@string/heading_shift_schedule_extend_request_work"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
+
+            <com.google.android.material.imageview.ShapeableImageView
+                android:id="@+id/iv_close_layout_extend"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_marginEnd="16dp"
+                android:layout_gravity="bottom"
+                android:src="@drawable/baseline_close_24" />
+
+        </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
