--- a/app/src/main/res/layout/fragment_shift_schedule_request_work.xml
+++ b/app/src/main/res/layout/fragment_shift_schedule_request_work.xml
@@ -178,13 +178,10 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/et_additionally">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
 
             <TextView
                 android:id="@+id/textView24"
+                android:layout_gravity="center"
                 style="@style/TextViewStyleHeading"
                 android:layout_weight="0.5"
                 android:layout_marginTop="16dp"
@@ -195,16 +192,6 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
-
-            <com.google.android.material.imageview.ShapeableImageView
-                android:id="@+id/iv_close_layout_extend"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:layout_marginEnd="10dp"
-                android:layout_gravity="bottom"
-                android:src="@drawable/baseline_close_24" />
-
-        </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -242,6 +229,40 @@
                 android:layout_marginBottom="16dp"
                 android:text="@string/time_closed_request_work"
                 app:icon="@drawable/shift_schedule_notes_time" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_marginTop="32dp"
+                android:orientation="horizontal"
+                android:layout_height="wrap_content">
+
+                <com.google.android.material.button.MaterialButton
+                    android:id="@+id/b_close_extend"
+                    style="@style/ButtonStyleRequestWork"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="4dp"
+                    android:text="сброс"
+                    app:strokeColor="@color/calendar_background"
+                    android:layout_marginStart="16dp"
+                    android:layout_marginEnd="16dp"
+                    android:layout_weight="1"
+                    android:layout_marginBottom="16dp"
+                    app:icon="@drawable/baseline_close_24" />
+
+                <com.google.android.material.button.MaterialButton
+                    android:id="@+id/b_ok_extend"
+                    style="@style/ButtonStyleRequestWork"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="4dp"
+                    android:layout_marginStart="16dp"
+                    android:layout_marginEnd="16dp"
+                    android:layout_weight="1"
+                    app:strokeColor="@color/calendar_background"
+                    android:text="добавить"
+                    android:layout_marginBottom="16dp"
+                    app:icon="@drawable/baseline_check_24" />
+
+            </LinearLayout>
 
         </LinearLayout>
 
