--- a/app/src/main/res/drawable/background_layout_calendar_select_request_work.xml
+++ b/app/src/main/res/drawable/background_layout_calendar_select_request_work.xml
@@ -4,7 +4,7 @@
     <item>
         <shape android:shape="rectangle">
             <gradient
-                android:startColor="#F44336"
+                android:startColor="@color/zero_vision_memo"
                 android:endColor="@color/floatingActionButton"
                 android:angle="90"/>
         </shape>
