--- a/app/src/main/res/layout/item_calendar_note_request_work.xml
+++ b/app/src/main/res/layout/item_calendar_note_request_work.xml
@@ -51,7 +51,7 @@
         android:layout_marginBottom="8dp"
         android:orientation="vertical"
         android:background="@drawable/shift_schedule_note_background"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/layout_button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent">
 
@@ -83,6 +83,43 @@
             android:layout_gravity="end"
             android:layout_marginBottom="8dp"
             android:textSize="16sp" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/layout_button"
+        android:layout_width="match_parent"
+        android:layout_height="48dp"
+        android:layout_marginTop="8dp"
+        android:visibility="gone"
+        android:orientation="horizontal"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout">
+
+        <com.google.android.material.button.MaterialButton
+            style="@style/ButtonStyleRequestWork"
+            android:layout_width="wrap_content"
+            android:layout_marginStart="24dp"
+            android:text="Редактировать"
+            android:textSize="10sp"
+            app:icon="@drawable/baseline_edit_24"
+            app:iconSize="18dp" />
+
+        <Space
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1" />
+
+        <com.google.android.material.button.MaterialButton
+            style="@style/ButtonStyleRequestWorkSave"
+            android:layout_marginEnd="24dp"
+            android:text="Удалить"
+
+            android:textSize="12sp"
+            app:icon="@drawable/delete"
+            app:iconSize="18dp" />
+
+
     </LinearLayout>
 
 
